--- a/post_view.html
+++ b/post_view.html
@@ -16,204 +16,241 @@
                 line-height: **[ lineHeight ] **!Important;
                 overflow: hidden;
             }
-        textarea {
-            display: none !important;
-        }
-        input {
-            display: none !important;
-        }
-        form {
-            display: none !important;
-        }
-        table, thead, tbody {
-            table-layout: fixed;
-            max-width: 100%% !important;
-        }
-        table, tr, td {
-            background-color: transparent !important;
-        }
-        table {
-            width: 100%% !important;
-            max-width 100%% !important;
-        }
-        h1, h2, h3 {
-            font-size: 1.0em !important;
-        }
-        .content a {
-            text-decoration: none !Important;
-            border-bottom: 1px dashed;
-        }
-        span {
-            white-space: normal !Important;
-        }
-        img {
-            max-width: 100%% !important;
-            width: auto !important;
-            height: auto !important;
-            margin: 0 auto !important;
-        }
-        .attach_image {
-            min-height: 20px;
-        }
-        .img_placeholder {
-            width: 100%%;
-            height: 185px;
-            line-height: 185px;
-            text-align: center;
-            background: #f6f6f6;
-            font-size: 0.8em;
-            /*color: #dadada;*/
-            margin: 10px 0;
-        }
-        .content video,
-        .content embed,
-        .content object {
-            display: none;
-        }
-        .content pre,
-        .content code {
-            white-space: pre-line;
-            font-size: 0.9em;
-        }
-        .content img[src^='images'] {
-            border: 0 !important;
-            outline: 0 !important;
-            margin: 0 !important;
-            width: auto !important;
-            background-color: transparent !important;
-            display: inline !important;
-        }
-        .list {
-            list-style: none outside none;
-            margin: 0;
-            padding: 0;
-        }
-        /* 标题相关 */
-        .post-title {
-            border-bottom: 1.0px solid #DCDCDC;
-            padding-top: 1px;
-        }
-        .title {
-            font-size: 18px !Important;
-            margin-bottom: 0px;
-        }
-        .title a {
-            text-decoration: none !Important;
-            color: #333 !Important;
-        }
-        .post-quote {
-            background-color: #f6f6f8;
-            border: 1.0px solid #CFCFD1;
-            margin-bottom: 10px;
-        }
-        .post-message {
-            border-bottom: 1.0px solid #DCDCDC;
-            padding: 4px 0px;
-        }
-        .page .gotoFloor {
-            background-color: Gainsboro;
-        }
-        .list {
-            list-style: none outside none;
-        }
-        /*发帖的时间 用户名 楼层等*/
-        .info {
-            /*background-color: red;*/
-            margin-left: 15px !important;
-            margin-right: 15px !important;
-            padding-top: 0px !important;
-            padding-bottom: 0px !important;
-            position: relative;
-            height: 35px;
-        }
-        /*帖子的内容*/
-        body > div > ul > li > div {
-            padding-top: 10px !important;
-            padding-bottom: 10px !important;
-            padding-left: 15px !important;
-            padding-right: 15px !important;
-        }
-        body > div > ul > li > div > ul > li {
-            border-bottom: 0px;
-            padding: 4px 0px;
-        }
-        /**/
-        .shell {
-            width: 95%;
-            border: 1px solid #909090;
-            padding: 8px;
-            padding-top: 8px;
-            margin: 8px;
-            margin-top: 12pt;
-            text-align: left;
-            background-color: #000000;
-            color: #ffffff;
-        }
-        .fieldset {
-            display: block;
-            -webkit-margin-start: 2px;
-            -webkit-margin-end: 2px;
-            -webkit-padding-before: 0.35em;
-            -webkit-padding-start: 0.75em;
-            -webkit-padding-end: 0.75em;
-            -webkit-padding-after: 0.625em;
-            border-image-source: initial;
-            border-image-slice: initial;
-            border-image-width: initial;
-            border-image-outset: initial;
-            border-image-repeat: initial;
-            min-width: -webkit-min-content;
-            border-width: 2px;
-            border-style: groove;
-            border-color: threedface;
-        }
-        .pre {
-            margin: 0px;
-            padding: 6px;
-            border: 1px solid;
-            width: 100%%;
-            height: 34px;
-            text-align: left;
-            overflow: auto
-        }
-        .avatar {
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
-        .avatar img {
-            width: 35px !important;
-            height: 35px !important;
-            -webkit-border-radius: 17.5px;
-            border: 0 !important;
-            outline: 0 !important;
-            margin: 0 !important;
-        }
-        .floor {
-            position: absolute;
-            color: #7f7f7f;
-            font-size: 10px;
-            right: 0;
-            top: 0px;
-        }
-        .time-ago {
-            font-size: 12px;
-            position: absolute;
-            right: 0;
-            bottom: 0;
-            color: #7f7f7f;
-        }
-        .author {
-            font-size: 14px;
-            color: #7f7f7f;
-            position: absolute;
-            left: 42px;
-            bottom: 0;
-        }
-        .blocked {
-            text-align: center;
-            color: #929292;
-        }
+
+            textarea {
+                display: none !important;
+            }
+
+            input {
+                display: none !important;
+            }
+
+            form {
+                display: none !important;
+            }
+
+            table, thead, tbody {
+                table-layout: fixed;
+                max-width: 100%% !important;
+            }
+
+            table, tr, td {
+                background-color: transparent !important;
+            }
+
+            table {
+                width: 100%% !important;
+                max-width 100%% !important;
+            }
+
+            h1, h2, h3 {
+                font-size: 1.0em !important;
+            }
+
+            .content a {
+                text-decoration: none !Important;
+                border-bottom: 1px dashed;
+            }
+
+            span {
+                white-space: normal !Important;
+            }
+
+            img {
+                max-width: 100%% !important;
+                width: auto !important;
+                height: auto !important;
+                margin: 0 auto !important;
+            }
+
+            .attach_image {
+                min-height: 20px;
+            }
+
+            .img_placeholder {
+                width: 100%%;
+                height: 185px;
+                line-height: 185px;
+                text-align: center;
+                background: #f6f6f6;
+                font-size: 0.8em;
+                /*color: #dadada;*/
+                margin: 10px 0;
+            }
+
+            .content video,
+            .content embed,
+            .content object {
+                display: none;
+            }
+
+            .content pre,
+            .content code {
+                white-space: pre-line;
+                font-size: 0.9em;
+            }
+
+            .content img[src^='images'] {
+                border: 0 !important;
+                outline: 0 !important;
+                margin: 0 !important;
+                width: auto !important;
+                background-color: transparent !important;
+                display: inline !important;
+            }
+
+            .list {
+                list-style: none outside none;
+                margin: 0;
+                padding: 0;
+            }
+
+            /* 标题相关 */
+            .post-title {
+                border-bottom: 1.0px solid #DCDCDC;
+                padding-top: 1px;
+            }
+
+            .title {
+                font-size: 18px !Important;
+                margin-bottom: 0px;
+            }
+
+            .title a {
+                text-decoration: none !Important;
+                color: #333 !Important;
+            }
+
+            .post-quote {
+                background-color: #f6f6f8;
+                border: 1.0px solid #CFCFD1;
+                margin-bottom: 10px;
+            }
+
+            .post-message {
+                border-bottom: 1.0px solid #DCDCDC;
+                padding: 4px 0px;
+            }
+
+            .page .gotoFloor {
+                background-color: Gainsboro;
+            }
+
+            .list {
+                list-style: none outside none;
+            }
+
+            /*帖子的内容*/
+            body > div > ul > li > div {
+                padding-top: 10px !important;
+                padding-bottom: 10px !important;
+                padding-left: 15px !important;
+                padding-right: 15px !important;
+            }
+
+            body > div > ul > li > div > ul > li {
+                border-bottom: 0px;
+                padding: 4px 0px;
+            }
+
+            /**/
+            .shell {
+                width: 95%;
+                border: 1px solid #909090;
+                padding: 8px;
+                padding-top: 8px;
+                margin: 8px;
+                margin-top: 12pt;
+                text-align: left;
+                background-color: #000000;
+                color: #ffffff;
+            }
+
+            .fieldset {
+                display: block;
+                -webkit-margin-start: 2px;
+                -webkit-margin-end: 2px;
+                -webkit-padding-before: 0.35em;
+                -webkit-padding-start: 0.75em;
+                -webkit-padding-end: 0.75em;
+                -webkit-padding-after: 0.625em;
+                border-image-source: initial;
+                border-image-slice: initial;
+                border-image-width: initial;
+                border-image-outset: initial;
+                border-image-repeat: initial;
+                min-width: -webkit-min-content;
+                border-width: 2px;
+                border-style: groove;
+                border-color: threedface;
+            }
+
+            .pre {
+                margin: 0px;
+                padding: 6px;
+                border: 1px solid;
+                width: 100%%;
+                height: 34px;
+                text-align: left;
+                overflow: auto
+            }
+
+            /* >>>>>>>>>> 发帖者的头像，名字，发帖时间，楼层*/
+            .info {
+                margin-left: 15px !important;
+                margin-right: 15px !important;
+                padding-top: 0px !important;
+                padding-bottom: 0px !important;
+                position: relative;
+                height: 35px;
+            }
+
+            .avatar {
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
+
+            .avatar img {
+                width: 35px !important;
+                height: 35px !important;
+                -webkit-border-radius: 17.5px;
+                border: 0 !important;
+                outline: 0 !important;
+                margin: 0 !important;
+            }
+
+            .floor {
+                position: absolute;
+                color: #7f7f7f;
+                font-size: 10px;
+                right: 0;
+                top: 0px;
+            }
+
+            .time-ago {
+                font-size: 12px;
+                position: absolute;
+                right: 0;
+                bottom: 0;
+                color: #7f7f7f;
+            }
+
+            .author {
+                font-size: 14px;
+                color: #7f7f7f;
+                position: relative;
+                vertical-align: middle;
+                line-height: 35px;
+                left: 30px;
+            }
+
+            /* 发帖者的头像，名字，发帖时间，楼层 <<<<<<<<<< */
+
+            .blocked {
+                text-align: center;
+                color: #929292;
+            }
         </style>
     </head>
     <body>
