--- a/post_view_notitle.html
+++ b/post_view_notitle.html
@@ -251,6 +251,11 @@
             text-align: center;
             color: #929292;
         }
+        a:link {color:#000000;text-decoration:none;}    /* 未被访问的链接 */
+        a:visited {color:#000000;text-decoration:none;} /* 已被访问的链接 */
+        a:hover {color:#000000;}   /* 鼠标指针移动到链接上 */
+        a:active {color:#000000;}  /* 正在被点击的链接 */
+
     </style>
 </head>
 <body>
