--- a/post_view.html
+++ b/post_view.html
@@ -127,6 +127,25 @@
                 margin-bottom: 10px;
             }
 
+            .quote2 {
+                font-size: 12px;
+                color: #333;
+                margin: 0px;
+                padding: 8px 28px 0;
+                color: #006699;
+                background: url(images/winds/read/quote.gif) 8px 8px no-repeat;
+            }
+
+            .blockquote3 {
+                font-size: 12px;
+                width: 80%;
+                border: 1px solid #ccc;
+                background: #f7f7f7;
+                border-left-width: 4px;
+                margin: 0 0 1px;
+                color: #555;
+            }
+
             .post-message {
                 border-bottom: 1.0px solid #DCDCDC;
                 padding: 4px 0px;
