--- a/post_view_notitle.html
+++ b/post_view_notitle.html
@@ -127,6 +127,17 @@
             margin-bottom: 10px;
         }
 
+        .blockquote {
+            font-size: 12px;
+            width: 80%;
+            border: 1px solid #ece9d8;
+            background: #fffef3;
+            border-left-width: 3px;
+            padding: 3px 5px 3px 8px;
+            margin: 0 0 1px;
+            color: #736933;
+        }
+
         .quote2 {
             font-size: 12px;
             color: #333;
@@ -142,6 +153,7 @@
             border: 1px solid #ccc;
             background: #f7f7f7;
             border-left-width: 4px;
+            padding: 3px 5px 3px 8px;
             margin: 0 0 1px;
             color: #555;
         }
