change css for drl quote

--- a/post_view_notitle.html
+++ b/post_view_notitle.html
@@ -35,7 +35,7 @@
         }
 
         table, tr, td {
-            background-color: transparent !important;
+            background-color: transparent;
         }
 
         table {
@@ -129,7 +129,7 @@
 
         .blockquote {
             font-size: 12px;
-            width: 80%;
+            width: 80%%;
             border: 1px solid #ece9d8;
             background: #fffef3;
             border-left-width: 3px;
@@ -149,10 +149,20 @@
 
         .blockquote3 {
             font-size: 12px;
-            width: 80%;
+            width: 80%%;
             border: 1px solid #ccc;
             background: #f7f7f7;
             border-left-width: 4px;
+            padding: 3px 5px 3px 8px;
+            margin: 0 0 1px;
+            color: #555;
+        }
+
+        /*DRL 论坛的引用样式*/
+        #quote_x {
+            font-size: 12px;
+            width: 100%%;
+            background: #f7f7f7;
             padding: 3px 5px 3px 8px;
             margin: 0 0 1px;
             color: #555;
