--- a/SupportFiles/more.html
+++ b/SupportFiles/more.html
@@ -42,7 +42,7 @@
         <li>费用将在确认购买狗，从 iTunes 帐户扣除</li>
         <li>订阅是自动续期的服务，若不打算续期，请在当前计费周期结束前至少 24 小时手动关闭</li>
         <li>续费的费用将在当前周期结束的 24 小时内扣除</li>
-        <li>在订阅服务后，可以在<a href="https://support.apple.com/zh-cn/HT202039">订阅设置</a>中查看</li>
+        <li>在订阅服务后，可以在"iTunes帐号设置"中查看与管理</li>
     </ul>
 </body>
 </html>
